--- a/src/main/resources/META-INF/neoforge.mods.toml
+++ b/src/main/resources/META-INF/neoforge.mods.toml
@@ -90,7 +90,7 @@ modId="pixelmon"
 type="required"
 versionRange="[${pixelmon_version},)"
 ordering="AFTER"
-side="SERVER"
+side="BOTH"
 
 # Features are specific properties of the game environment, that you may want to declare you require. This example declares
 # that your mod requires GL version 3.2 or higher. Other features will be added. They are side aware so declaring this won't
